--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.0.0",
     "vue-chart-3": "^3.0.9",
     "vue-router": "^4.0.0-0",
+    "vuestic-ui": "^1.3.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
